# sense_eeg_cpp

./: CMakeLists.txt  README.md  package.xml
config/: mock_publisher.yaml
launch/: mock_publisher_launch.py
src/: mock_eeg_publisher.cpp
